test/scc_test/exp/semantic-errors/006.a
006.t:4:7: error: expression must be a modifiable lvalue